# senior_design_repo

./: .gitignore  app.json  belt_log.txt  motor3.csv  motor4.csv  motor5.csv  package-lock.json  package.json
.claude/: settings.local.json
app/: _layout.tsx  index.tsx  sensor_list.tsx  settings.tsx  user_setup.tsx
firmware/: motor_bit_patterns.md  run_tests.bat  sensor_motor_mapping.md
firmware/beacon/: beacon.ino
firmware/docs/: sensor_motor_test_guide.md
firmware/esp/: CMakeLists.txt  FLASH_GUIDE.md  partitions.csv  sdkconfig.defaults  sdkconfig.old
firmware/esp/main/: CMakeLists.txt  audio_player.c  audio_player.h  battery_monitor.c  battery_monitor.h  beacon_scanner.c  beacon_scanner.h  clip_storage.c  clip_storage.h  distance_categorizer_wrapper.cpp  distance_categorizer_wrapper.h  main.c  pca9548a.c  pca9548a.h  pipeline_wrapper.cpp  pipeline_wrapper.h  sensor_task.c  sensor_task.h  shift_register.c  shift_register.h  vl53l0x.c  vl53l0x.h  vl53l1x.c  vl53l1x.h
firmware/quantitative_pipeline_data/: generate_metrics.cpp  metric1_localization.csv  metric2_coverage.csv  metric3_motor_count.csv  metric4_monotonicity.csv  metric5_linearity.csv  metric6_latency.csv  metric7_discrimination.csv  metric8_montecarlo.csv  metrics_summary.txt  plot_metrics.py  presentation_talking_points.md  rssi vs distance.xlsx  support_distance_vs_level.csv
firmware/tests/: test_distance_categorizer.cpp  test_esp_driver_sim.cpp  test_helpers.h  test_main.cpp  test_motor_mapper.cpp  test_pipeline.cpp  (+2 more)
plugins/: TtsSynthesizer.m  withTtsSynthesizer.js
temp/: App.tsx
(+19 files in other folders)
