idf_component_register(
    SRCS "main.c"
         "beacon_scanner.c"
         "audio_player.c"
         "clip_storage.c"
         "vl53l1x.c"
         "vl53l0x.c"
         "sensor_task.c"
         "shift_register.c"
         "pca9548a.c"
         "distance_categorizer_wrapper.cpp"
         "pipeline_wrapper.cpp"
         "../../src/core/distance_categorizer.cpp"
         "../../src/core/motor_mapper.cpp"
         "../../src/core/shift_register_packer.cpp"
         "../../src/core/pipeline.cpp"
    INCLUDE_DIRS "."
                 "../../src/core"
)
